// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FulfillmentChecklist > RTL snapshot tests > matches snapshot in LTR mode 1`] = `
<div>
  <div
    dir="ltr"
  >
    <div
      class="space-y-4"
      dir="auto"
    >
      <div
        class="flex items-center justify-between"
      >
        <div>
          <h2
            class="text-lg font-semibold text-foreground"
          >
            title
          </h2>
          <p
            class="text-sm text-muted-foreground"
          >
            prescribedBy {"name":"Dr. Ahmad"}
          </p>
        </div>
        <div
          class="flex gap-2"
        >
          <button
            class="group/button inline-flex shrink-0 items-center justify-center rounded-full border border-transparent bg-clip-padding text-sm font-medium whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-2 focus-visible:ring-ring/30 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-2 aria-invalid:ring-destructive/20 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 bg-secondary text-secondary-foreground hover:bg-secondary/80 h-9 gap-1.5 px-4 [@media(pointer:coarse)]:min-h-11"
            data-size="default"
            data-slot="button"
            data-testid="select-all-btn"
            data-variant="secondary"
            type="button"
          >
            selectAll
          </button>
          <button
            class="group/button inline-flex shrink-0 items-center justify-center rounded-full border border-transparent bg-clip-padding text-sm font-medium whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-2 focus-visible:ring-ring/30 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-2 aria-invalid:ring-destructive/20 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 bg-secondary text-secondary-foreground hover:bg-secondary/80 h-9 gap-1.5 px-4 [@media(pointer:coarse)]:min-h-11"
            data-size="default"
            data-slot="button"
            data-testid="deselect-all-btn"
            data-variant="secondary"
            type="button"
          >
            deselectAll
          </button>
        </div>
      </div>
      <div
        aria-live="assertive"
        class="rounded-xl bg-warning/10 backdrop-blur-md p-5 shadow-card ring-[0.65px] ring-warning/40"
        data-banner-state="unknown"
        data-testid="allergy-banner"
        role="alert"
      >
        <div
          class="flex items-center gap-2 mb-1"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-triangle-alert text-warning shrink-0"
            fill="none"
            height="20"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
            />
            <path
              d="M12 9v4"
            />
            <path
              d="M12 17h.01"
            />
          </svg>
          <span
            class="text-sm font-bold text-warning uppercase tracking-wide"
          >
            unknownTitle
          </span>
        </div>
        <p
          class="text-sm font-semibold text-warning"
        >
          unknownBody
        </p>
      </div>
      <ul
        class="space-y-3"
        role="list"
      >
        <li
          class="rounded-2xl border p-4 transition-colors border-primary-300 bg-primary-50/50"
        >
          <div
            class="flex items-start gap-3"
          >
            <span
              class="relative inline-flex shrink-0 h-5 w-5 mt-1"
            >
              <input
                aria-label="fulfillAriaLabel {"medication":"Amoxicillin"}"
                checked=""
                class="peer absolute inset-0 z-10 m-0 cursor-pointer opacity-0 disabled:cursor-not-allowed"
                data-testid="fulfill-checkbox-rx-001"
                type="checkbox"
              />
              <span
                aria-hidden="true"
                class="pointer-events-none flex items-center justify-center rounded-full border border-border bg-background text-transparent transition-colors h-5 w-5 peer-checked:border-primary peer-checked:bg-primary peer-checked:text-primary-foreground peer-focus-visible:ring-2 peer-focus-visible:ring-offset-1 peer-focus-visible:ring-ring peer-disabled:opacity-50"
              >
                <svg
                  aria-hidden="true"
                  class="h-3.5 w-3.5"
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="3"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M20 6 9 17l-5-5"
                  />
                </svg>
              </span>
            </span>
            <div
              class="min-w-0 flex-1"
            >
              <p
                class="font-medium text-foreground"
              >
                Amoxicillin 500mg Capsule
              </p>
              <p
                class="text-sm text-muted-foreground"
              >
                1
                 
                capsule
                <span>
                   · 
                  3× daily
                </span>
                <span>
                   · 
                  days {"count":7}
                </span>
              </p>
              <div
                class="mt-3 space-y-2"
              >
                <div
                  class="grid grid-cols-2 gap-3"
                >
                  <div>
                    <label
                      class="mb-1 block text-xs font-medium text-muted-foreground"
                      for="brand-rx-001"
                    >
                      brandName
                    </label>
                    <input
                      class="w-full rounded-md border border-border px-3 py-2 text-sm placeholder:text-muted-foreground focus:border-primary-500 focus:outline-none focus:ring-1 focus:ring-primary-500"
                      data-testid="brand-freetext"
                      placeholder="Brand name"
                      type="text"
                      value=""
                    />
                  </div>
                  <div>
                    <label
                      class="mb-1 block text-xs font-medium text-muted-foreground"
                      for="batch-rx-001"
                    >
                      batchLot
                       
                      <span
                        class="text-muted-foreground"
                      >
                        batchOptional
                      </span>
                    </label>
                    <input
                      class="w-full rounded-md border border-border px-3 py-2 text-sm placeholder:text-muted-foreground focus:border-primary-500 focus:outline-none focus:ring-1 focus:ring-primary-500"
                      data-testid="batch-input-rx-001"
                      id="batch-rx-001"
                      placeholder="batchPlaceholder"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          class="rounded-2xl border p-4 transition-colors border-primary-300 bg-primary-50/50"
        >
          <div
            class="flex items-start gap-3"
          >
            <span
              class="relative inline-flex shrink-0 h-5 w-5 mt-1"
            >
              <input
                aria-label="fulfillAriaLabel {"medication":"Ibuprofen"}"
                checked=""
                class="peer absolute inset-0 z-10 m-0 cursor-pointer opacity-0 disabled:cursor-not-allowed"
                data-testid="fulfill-checkbox-rx-002"
                type="checkbox"
              />
              <span
                aria-hidden="true"
                class="pointer-events-none flex items-center justify-center rounded-full border border-border bg-background text-transparent transition-colors h-5 w-5 peer-checked:border-primary peer-checked:bg-primary peer-checked:text-primary-foreground peer-focus-visible:ring-2 peer-focus-visible:ring-offset-1 peer-focus-visible:ring-ring peer-disabled:opacity-50"
              >
                <svg
                  aria-hidden="true"
                  class="h-3.5 w-3.5"
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="3"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M20 6 9 17l-5-5"
                  />
                </svg>
              </span>
            </span>
            <div
              class="min-w-0 flex-1"
            >
              <p
                class="font-medium text-foreground"
              >
                Ibuprofen 400mg Tablet
              </p>
              <p
                class="text-sm text-muted-foreground"
              >
                1
                 
                tablet
                <span>
                   · 
                  2× daily
                </span>
                <span>
                   · 
                  days {"count":5}
                </span>
              </p>
              <div
                class="mt-3 space-y-2"
              >
                <div
                  class="grid grid-cols-2 gap-3"
                >
                  <div>
                    <label
                      class="mb-1 block text-xs font-medium text-muted-foreground"
                      for="brand-rx-002"
                    >
                      brandName
                    </label>
                    <input
                      class="w-full rounded-md border border-border px-3 py-2 text-sm placeholder:text-muted-foreground focus:border-primary-500 focus:outline-none focus:ring-1 focus:ring-primary-500"
                      data-testid="brand-freetext"
                      placeholder="Brand name"
                      type="text"
                      value=""
                    />
                  </div>
                  <div>
                    <label
                      class="mb-1 block text-xs font-medium text-muted-foreground"
                      for="batch-rx-002"
                    >
                      batchLot
                       
                      <span
                        class="text-muted-foreground"
                      >
                        batchOptional
                      </span>
                    </label>
                    <input
                      class="w-full rounded-md border border-border px-3 py-2 text-sm placeholder:text-muted-foreground focus:border-primary-500 focus:outline-none focus:ring-1 focus:ring-primary-500"
                      data-testid="batch-input-rx-002"
                      id="batch-rx-002"
                      placeholder="batchPlaceholder"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </li>
      </ul>
      <button
        class="group/button inline-flex shrink-0 items-center justify-center rounded-full border border-transparent bg-clip-padding text-sm font-medium whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-2 focus-visible:ring-ring/30 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-2 aria-invalid:ring-destructive/20 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 bg-primary text-primary-foreground hover:bg-primary/80 h-9 gap-1.5 px-4 [@media(pointer:coarse)]:min-h-11 w-full"
        data-size="default"
        data-slot="button"
        data-testid="confirm-dispensing-btn"
        data-variant="default"
        type="button"
      >
        confirmDispensing
      </button>
    </div>
  </div>
</div>
`;

exports[`FulfillmentChecklist > RTL snapshot tests > matches snapshot in RTL mode 1`] = `
<div>
  <div
    dir="rtl"
  >
    <div
      class="space-y-4"
      dir="auto"
    >
      <div
        class="flex items-center justify-between"
      >
        <div>
          <h2
            class="text-lg font-semibold text-foreground"
          >
            title
          </h2>
          <p
            class="text-sm text-muted-foreground"
          >
            prescribedBy {"name":"Dr. Ahmad"}
          </p>
        </div>
        <div
          class="flex gap-2"
        >
          <button
            class="group/button inline-flex shrink-0 items-center justify-center rounded-full border border-transparent bg-clip-padding text-sm font-medium whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-2 focus-visible:ring-ring/30 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-2 aria-invalid:ring-destructive/20 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 bg-secondary text-secondary-foreground hover:bg-secondary/80 h-9 gap-1.5 px-4 [@media(pointer:coarse)]:min-h-11"
            data-size="default"
            data-slot="button"
            data-testid="select-all-btn"
            data-variant="secondary"
            type="button"
          >
            selectAll
          </button>
          <button
            class="group/button inline-flex shrink-0 items-center justify-center rounded-full border border-transparent bg-clip-padding text-sm font-medium whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-2 focus-visible:ring-ring/30 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-2 aria-invalid:ring-destructive/20 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 bg-secondary text-secondary-foreground hover:bg-secondary/80 h-9 gap-1.5 px-4 [@media(pointer:coarse)]:min-h-11"
            data-size="default"
            data-slot="button"
            data-testid="deselect-all-btn"
            data-variant="secondary"
            type="button"
          >
            deselectAll
          </button>
        </div>
      </div>
      <div
        aria-live="assertive"
        class="rounded-xl bg-warning/10 backdrop-blur-md p-5 shadow-card ring-[0.65px] ring-warning/40"
        data-banner-state="unknown"
        data-testid="allergy-banner"
        role="alert"
      >
        <div
          class="flex items-center gap-2 mb-1"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-triangle-alert text-warning shrink-0"
            fill="none"
            height="20"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
            />
            <path
              d="M12 9v4"
            />
            <path
              d="M12 17h.01"
            />
          </svg>
          <span
            class="text-sm font-bold text-warning uppercase tracking-wide"
          >
            unknownTitle
          </span>
        </div>
        <p
          class="text-sm font-semibold text-warning"
        >
          unknownBody
        </p>
      </div>
      <ul
        class="space-y-3"
        role="list"
      >
        <li
          class="rounded-2xl border p-4 transition-colors border-primary-300 bg-primary-50/50"
        >
          <div
            class="flex items-start gap-3"
          >
            <span
              class="relative inline-flex shrink-0 h-5 w-5 mt-1"
            >
              <input
                aria-label="fulfillAriaLabel {"medication":"Amoxicillin"}"
                checked=""
                class="peer absolute inset-0 z-10 m-0 cursor-pointer opacity-0 disabled:cursor-not-allowed"
                data-testid="fulfill-checkbox-rx-001"
                type="checkbox"
              />
              <span
                aria-hidden="true"
                class="pointer-events-none flex items-center justify-center rounded-full border border-border bg-background text-transparent transition-colors h-5 w-5 peer-checked:border-primary peer-checked:bg-primary peer-checked:text-primary-foreground peer-focus-visible:ring-2 peer-focus-visible:ring-offset-1 peer-focus-visible:ring-ring peer-disabled:opacity-50"
              >
                <svg
                  aria-hidden="true"
                  class="h-3.5 w-3.5"
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="3"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M20 6 9 17l-5-5"
                  />
                </svg>
              </span>
            </span>
            <div
              class="min-w-0 flex-1"
            >
              <p
                class="font-medium text-foreground"
              >
                Amoxicillin 500mg Capsule
              </p>
              <p
                class="text-sm text-muted-foreground"
              >
                1
                 
                capsule
                <span>
                   · 
                  3× daily
                </span>
                <span>
                   · 
                  days {"count":7}
                </span>
              </p>
              <div
                class="mt-3 space-y-2"
              >
                <div
                  class="grid grid-cols-2 gap-3"
                >
                  <div>
                    <label
                      class="mb-1 block text-xs font-medium text-muted-foreground"
                      for="brand-rx-001"
                    >
                      brandName
                    </label>
                    <input
                      class="w-full rounded-md border border-border px-3 py-2 text-sm placeholder:text-muted-foreground focus:border-primary-500 focus:outline-none focus:ring-1 focus:ring-primary-500"
                      data-testid="brand-freetext"
                      placeholder="Brand name"
                      type="text"
                      value=""
                    />
                  </div>
                  <div>
                    <label
                      class="mb-1 block text-xs font-medium text-muted-foreground"
                      for="batch-rx-001"
                    >
                      batchLot
                       
                      <span
                        class="text-muted-foreground"
                      >
                        batchOptional
                      </span>
                    </label>
                    <input
                      class="w-full rounded-md border border-border px-3 py-2 text-sm placeholder:text-muted-foreground focus:border-primary-500 focus:outline-none focus:ring-1 focus:ring-primary-500"
                      data-testid="batch-input-rx-001"
                      id="batch-rx-001"
                      placeholder="batchPlaceholder"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          class="rounded-2xl border p-4 transition-colors border-primary-300 bg-primary-50/50"
        >
          <div
            class="flex items-start gap-3"
          >
            <span
              class="relative inline-flex shrink-0 h-5 w-5 mt-1"
            >
              <input
                aria-label="fulfillAriaLabel {"medication":"Ibuprofen"}"
                checked=""
                class="peer absolute inset-0 z-10 m-0 cursor-pointer opacity-0 disabled:cursor-not-allowed"
                data-testid="fulfill-checkbox-rx-002"
                type="checkbox"
              />
              <span
                aria-hidden="true"
                class="pointer-events-none flex items-center justify-center rounded-full border border-border bg-background text-transparent transition-colors h-5 w-5 peer-checked:border-primary peer-checked:bg-primary peer-checked:text-primary-foreground peer-focus-visible:ring-2 peer-focus-visible:ring-offset-1 peer-focus-visible:ring-ring peer-disabled:opacity-50"
              >
                <svg
                  aria-hidden="true"
                  class="h-3.5 w-3.5"
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="3"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M20 6 9 17l-5-5"
                  />
                </svg>
              </span>
            </span>
            <div
              class="min-w-0 flex-1"
            >
              <p
                class="font-medium text-foreground"
              >
                Ibuprofen 400mg Tablet
              </p>
              <p
                class="text-sm text-muted-foreground"
              >
                1
                 
                tablet
                <span>
                   · 
                  2× daily
                </span>
                <span>
                   · 
                  days {"count":5}
                </span>
              </p>
              <div
                class="mt-3 space-y-2"
              >
                <div
                  class="grid grid-cols-2 gap-3"
                >
                  <div>
                    <label
                      class="mb-1 block text-xs font-medium text-muted-foreground"
                      for="brand-rx-002"
                    >
                      brandName
                    </label>
                    <input
                      class="w-full rounded-md border border-border px-3 py-2 text-sm placeholder:text-muted-foreground focus:border-primary-500 focus:outline-none focus:ring-1 focus:ring-primary-500"
                      data-testid="brand-freetext"
                      placeholder="Brand name"
                      type="text"
                      value=""
                    />
                  </div>
                  <div>
                    <label
                      class="mb-1 block text-xs font-medium text-muted-foreground"
                      for="batch-rx-002"
                    >
                      batchLot
                       
                      <span
                        class="text-muted-foreground"
                      >
                        batchOptional
                      </span>
                    </label>
                    <input
                      class="w-full rounded-md border border-border px-3 py-2 text-sm placeholder:text-muted-foreground focus:border-primary-500 focus:outline-none focus:ring-1 focus:ring-primary-500"
                      data-testid="batch-input-rx-002"
                      id="batch-rx-002"
                      placeholder="batchPlaceholder"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </li>
      </ul>
      <button
        class="group/button inline-flex shrink-0 items-center justify-center rounded-full border border-transparent bg-clip-padding text-sm font-medium whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-2 focus-visible:ring-ring/30 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-2 aria-invalid:ring-destructive/20 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 bg-primary text-primary-foreground hover:bg-primary/80 h-9 gap-1.5 px-4 [@media(pointer:coarse)]:min-h-11 w-full"
        data-size="default"
        data-slot="button"
        data-testid="confirm-dispensing-btn"
        data-variant="default"
        type="button"
      >
        confirmDispensing
      </button>
    </div>
  </div>
</div>
`;
